# aoc2025

day1/app/: Main.hs
day10/app/: Main.hs
day11/app/: Main.hs
day2/app/: Main.hs
day3/app/: Main.hs
day4/app/: Main.hs
day5/app/: Main.hs
day6/app/: Main.hs
day7/: LICENSE  aoc2025.cabal
day7/app/: Main.hs
day8/app/: Main.hs
day9/app/: Main.hs
